# da298a

./: .gitignore  CMakeLists.txt  README.md  pom.xml  vcpkg.json
Simulate_LinkState/src/: DijkstraAlgorithm.java  MainSim.java  Router.java  RouterManager.java  RoutingTopology.java
Task1/src/test/java/se/mau/: enrovTest.java
Task2/: pom.xml
Task2/src/main/java/se/mau/: App.java  Clock.java  Date.java  Time.java
Task2/src/test/java/se/mau/: AppTest.java  ClockTest.java  DateBoundaryTest.java  TimeBoundaryTest.java
light/: CMakeLists.txt  helloworld.cpp  vcpkg.json
light/tests/: CMakeLists.txt  lighttest.cpp
shelter/: CMakeLists.txt  clock_server.hpp  flicker.hpp  hardwareclient.hpp  sandbox.cpp  shelter.cpp  vcpkg.json
shelter/shelter/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  common.hpp  graphics_context.cpp  graphics_context.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shelter.hpp  utility.hpp  window.cpp  window.hpp
sky/: CMakeLists.txt  anim.cpp  anim.hpp  library.json  mcp.cpp  mcp.hpp  queue.hpp  sky.cpp  sky.hpp  topo.cpp  topo.hpp  utility.hpp  vcpkg.json
sky/tests/: CMakeLists.txt  skytest.cpp
src/main/java/se/mau/: rovar.java
src/test/java/se/mau/: derovTest.java  enrovTest.java  rovarTest.java
sun/: README.md
sun/src/: main.cpp
sunlight/: .gitignore  README.md  platformio.ini
sunlight/src/: config_status.cpp  config_status.hpp  control_register.cpp  control_register.hpp  main.cpp  mode.hpp  multicom.cpp  multicom.hpp  porter.cpp  porter.hpp
tempos/: #auto_saved_files#  .gitignore  prototype.kicad_sch  sym-lib-table  tempos.kicad_pro  tempos.kicad_sch  tempos.kicad_sym
tests/: CMakeLists.txt  mcp_tests.hpp  queue_tests.hpp  testrunner.cpp  tests.cpp  topo_tests.hpp  utility_tests.hpp  vcpkg.json
